--- a/addons/textmate/package.json
+++ b/addons/textmate/package.json
@@ -4,10 +4,12 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "eslint": "eslint src --ext .ts --ext .tsx"
+    "eslint": "eslint src --ext .ts --ext .tsx",
+    "fix-imports": "fix-esm-import-path ./dist/index.js || true"
   },
   "devDependencies": {
     "@types/minimist": "^1.2.2",
+    "fix-esm-import-path": "^1.5.0",
     "js-yaml": "^4.1.0",
     "jsonc-parser": "^2.2.1",
     "minimist": "^1.2.8",
