--- a/eden/contrib/reviewstack/package.json
+++ b/eden/contrib/reviewstack/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "diff": "^5.0.0",
+    "geist": "^1.2.2",
     "monaco-editor": "^0.28.1",
+    "non.geist": "^1.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "recoil": "^0.7.5",
